--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.9.4",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@googlemaps/markerclusterer": "^2.5.3",
     "@headlessui/react": "^2.1.3",
     "@mui/base": "5.0.0-beta.66",
     "@mui/icons-material": "^6.2.0",
@@ -18,6 +20,7 @@
     "@types/node": "^22.5.0",
     "@types/react": "19.0.1",
     "@types/react-dom": "19.0.1",
+    "@vis.gl/react-google-maps": "^1.4.2",
     "aos": "^3.0.0-beta.6",
     "dayjs": "^1.11.13",
     "formik": "^2.4.6",
