--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@clerk/nextjs": "^6.9.4",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@googlemaps/markerclusterer": "^2.5.3",
@@ -25,9 +24,9 @@
     "dayjs": "^1.11.13",
     "formik": "^2.4.6",
     "next": "15.0.4",
-    "next-auth": "5.0.0-beta.25",
     "react": "19.0.0",
     "react-dom": "19.0.0",
+    "resend": "^3.0.0",
     "typescript": "^5.3.3",
     "yup": "^1.6.0",
     "zod": "^3.24.1"
@@ -36,6 +35,8 @@
     "@tailwindcss/forms": "^0.5.7",
     "@types/aos": "^3.0.7",
     "autoprefixer": "^10.4.16",
+    "eslint": "^9",
+    "eslint-config-next": "15.5.0",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.3.6"
   }
